<resources>
    <string name="app_name">Hortelã</string>
<string name="close_button">Botão voltar/sair</string>
    <string name="title">Doações</string>
    <string name="pix_key_label">Chave Pix:</string>
    <string name="email_label">Ou também para:</string>
    <string name="phone_label">ou</string>
    <string name="contact">Dúvidas? Fale conosco!</string>
    <string name="pix_key"></string>
    <string name="emailpix">HortelaDoacoes@gmail.com</string>
    <string name="phone">(11)91234-5678</string>
    <string name="email">E-mail</string>
    <string name="subject">Assunto</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="button_send">Enviar</string>
    <string name="title_activity_calendariovol_main">calendariovol_main</string>
    <string name="data_selecionada">Data selecionada: %1$d/%2$d/%3$d</string>
    <string name="data_salva_sucesso">Data de disponibilidade salva!</string>
    <string name="erro_salvar_data">Erro ao salvar a data</string>
    <string name="atividade">Atividade: %1$s</string>
    <string name="atividade_nao_definida">Nenhuma atividade definida.</string>
    <string name="textDisp">
    <u>Entre em contato conosco</u>
</string>
</resources>