<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF">

    <!-- Título -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <!-- Chave Pix -->

    <TextView
        android:id="@+id/pixkeylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/pix_key_label"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pixkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pix_key"
        android:textSize="18sp"
        android:layout_below="@id/title"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/pixkeylabel"
        android:layout_marginStart="8dp"/>

    <ImageView
        android:id="@+id/qr_code"
        android:layout_width="370dp"
        android:layout_height="170dp"
        android:layout_below="@id/pixkeylabel"
        android:layout_marginTop="9dp"
        android:src="@drawable/qrcode" />

    <TextView
        android:id="@+id/email_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="18sp"
        android:layout_below="@id/qr_code"
        android:layout_marginTop="24dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailpix"
        android:textSize="18sp"
        android:layout_below="@id/qr_code"
        android:layout_marginTop="24dp"
        android:layout_toEndOf="@id/email_label"
        android:layout_marginStart="8dp"/>

    <!-- Telefone -->
    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_label"
        android:textSize="18sp"
        android:layout_below="@id/email"
        android:layout_marginTop="8dp"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="18sp"
        android:layout_below="@id/email"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/phone_label"
        android:layout_marginStart="8dp"/>

    <!-- Contato -->
    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textSize="18sp"
        android:layout_below="@id/phone"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <!-- Botão de Fechar -->
    <ImageButton
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"/>
</RelativeLayout>